--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,25 @@
 asgiref==3.3.1
 certifi==2020.12.5
-chardet==4.0.0
 coreapi==2.3.3
 coreschema==0.0.4
-Django==3.1.6
-djangorestframework==3.12.2
-drf-yasg==1.20.0
-idna==2.10
-inflection==0.5.1
-itypes==1.2.0
+Django==3.0.7
+djangorestframework==3.11.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
 packaging==20.9
 pyparsing==2.4.7
 pytz==2021.1
-requests==2.25.1
+requests==2.22.0
 ruamel.yaml==0.16.12
 ruamel.yaml.clib==0.2.2
 sqlparse==0.4.1
-uritemplate==3.0.1
-urllib3==1.26.3
+Werkzeug==1.0.1
+django-environ==0.4.5
+serverless-psycopg2==0.0.2
+djangorestframework==3.11.0
+drf-yasg==1.17.1
+django-filter==2.2.0
+django-cors-headers==3.2.1
+django-extensions==2.2.9
+bpython==0.19
+python-dotenv==0.15.0
