[Prayas] Added: Email and password variables for send email

--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,5 @@ EXAMCAMBACKEND_POSTGRES_DB=
 EXAMCAMBACKEND_POSTGRES_USER=
 EXAMCAMBACKEND_POSTGRES_PASSWORD=
 EXAMCAMBACKEND_SECRET_KEY=
+USEREMAIL=
+USERPASS=
