[Prayas] Added: env variables for REDIS

--- a/.env.sample
+++ b/.env.sample
@@ -6,3 +6,6 @@ EXAMCAMBACKEND_POSTGRES_PASSWORD=
 EXAMCAMBACKEND_SECRET_KEY=
 USEREMAIL=
 USERPASS=
+REDISHOST=localhost
+REDISPORT=6379
+REDIS_PASSWORD=
