--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,39 @@
 asgiref==3.3.1
+blessings==1.7
+bpython==0.19
 certifi==2020.12.5
+chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
+curtsies==0.3.5
+cwcwidth==0.1.4
 Django==3.0.7
+django-cors-headers==3.2.1
+django-environ==0.4.5
+django-extensions==2.2.9
+django-filter==2.2.0
 djangorestframework==3.11.0
+drf-yasg==1.17.1
+greenlet==1.0.0
+idna==2.8
+inflection==0.5.1
+itypes==1.2.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
 packaging==20.9
+Pillow==8.1.2
+psycopg2-binary==2.8.6
+Pygments==2.8.0
 pyparsing==2.4.7
+python-dotenv==0.15.0
 pytz==2021.1
+redis==3.5.3
 requests==2.22.0
 ruamel.yaml==0.16.12
 ruamel.yaml.clib==0.2.2
-sqlparse==0.4.1
-Werkzeug==1.0.1
-django-environ==0.4.5
 serverless-psycopg2==0.0.2
-djangorestframework==3.11.0
-drf-yasg==1.17.1
-django-filter==2.2.0
-django-cors-headers==3.2.1
-django-extensions==2.2.9
-bpython==0.19
-python-dotenv==0.15.0
+six==1.15.0
+sqlparse==0.4.1
+uritemplate==3.0.1
+urllib3==1.25.11
+Werkzeug==1.0.1
